# ada

./: CMakeLists.txt  Makefile  README.md  cmovetraj.txt  manifest.xml
ada_description/: CHANGELOG.rst  manifest.xml  package.xml
ada_description/launch/: display.launch
ada_description/meshes/: Arm_Link.STL  Arm_Link.dae  Arm_Ring_Link.dae  Finger_1_Distal_Link.STL  Finger_1_Proximal_Link.STL  Finger_1_Proximal_Link.dae  Finger_2_Distal_Link.STL  Finger_2_Distal_Link.dae  Finger_2_Proximal_Link.STL  Forearm_Link.STL  Forearm_Link.dae  Forearm_Ring_Link.STL  Forearm_Ring_Link.dae  Hand_Link.dae  Hand_Link_camera.STL  Hand_Link_camera.dae  Hand_Ring_Link.dae  Shoulder_Link.dae  Shoulder_Ring_Link.dae  StructureIO.stl  Wrist_1_Link.dae  Wrist_2_Link.dae  Wrist_2_Ring_Link.STL  Wrist_2_Ring_Link.dae  astra.stl  base_link.dae  finger_distal_limb_1.dae  finger_proximal_limb_1.dae  mico_hand_structureio.dae  mico_link_1.dae  mico_link_2.dae  mico_link_3.dae  mico_link_4.dae  mico_link_5.dae  mico_link_base.dae  mico_link_finger_1.dae  mico_link_finger_2.dae  mico_link_hand.dae  structureio.dae
ada_description/ordata/objects/household/: fuze_bottle.kinbody.xml
ada_description/ordata/robots/: mico-modified-nofingers.robot.xml  mico-modified-old.robot.xml  mico-modified.robot.xml  mico-modified2.robot.xml  mico-modified_backup.robot.xml  mico.robot.xml  mico_straight_rounded.robot.xml
ada_description/ordata/sensors/: camera.sensor.xml
ada_description/robots/: jaco.srdf  jaco.urdf  mico-modified-manual.urdf  mico-modified-old.urdf  mico-modified-updated.urdf  mico-modified.srdf  mico-modified.urdf  mico-modified.urdf~  mico-modified2.urdf  mico.srdf  mico.urdf
ada_description/zero_reset_instructions/: ResetZeroPositionInstructions.txt
ada_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
ada_launch/config/: controllers.yaml  jaco_controllers.yaml
ada_launch/launch/: ada_demo.launch  calibration.launch  cartesian_teleop.launch  default.launch  default.launch~  jaco.launch  kinova_joystick.launch  pid_cartesian_teleop.launch  state_publisher.launch  talker.launch
ada_launch/scripts/: set_permissions.sh  test.py
adapy/: CHANGELOG.rst  catkin.cmake  mainpage.dox  manifext.xml  package.xml  setup.py
adapy/calibration/: f1.csv  j1.csv  j2.csv  j3.csv  j4.csv  j5.csv  j6.csv
adapy/config/: calibration.rviz  configurations.yaml  glass_grasp1_tsr  glass_grasp_tsr.yaml  glass_move_tsr.yaml  tsrs.yaml
adapy/scripts/: calibrate.py  console.py  graspObjectChecker.py  lerrel-test.py  move_until_touch_gather_data.py  openLoopGrasper.py  openLoopGrasper_original.py  plot_velocity.py  test.py  testServo.py  testVelocity.py
adapy/src/: console.py  test.py
adapy/src/adapy/: __init__.py  adarobot.py  controller_client.py  futures.py  hand.py  mico.py  micohand.py  ros_control.py  trajectory_client.py  util.py
adapy/src/adapy/action/: __init__.py  block_object.py  blocks.py  eating.py  graspObjectChecker.py  grasping.py  openLoopGrasper.py  rogue.py
adapy/src/adapy/action/open_loop_grasping_code/adapy/: catkin.cmake  manifest.xml
adapy/src/adapy/action/open_loop_grasping_code/adapy/config/: configurations.yaml  tsrs.yaml
adapy/src/adapy/action/open_loop_grasping_code/adapy/scripts/: .openLoopGrasper.py.swp  \  getBlockCoordinates.py  graspObjectChecker.py  openLoopGrasper.py  testVelocity.py
adapy/src/adapy/action/open_loop_grasping_code/adapy/src/adapy/: adarobot.py  util.py
adapy/src/adapy/action/open_loop_grasping_code/adapy/tests/: adapy_tests.py
adapy/src/adapy/action/open_loop_grasping_code/data/: 1450678706.npy  1450680134.npy  1450682425.npy
adapy/src/adapy/action/open_loop_grasping_code/data/Graphs/3paramPolicy/: paramList.txt
adapy/src/adapy/action/open_loop_grasping_code/data/Graphs/UCBTest/UCBSimpleTest/: param_list.txt
adapy/src/adapy/tsr/: __init__.py  block.py  block_bin.py  bowl.py  fuze.py  generic.py  glass.py
config/: configurations.yaml
meshes/: Hand_Link.STL  Hand_Ring_Link.STL  Shoulder_Link.STL  Shoulder_Ring_Link.STL  Wrist_1_Link.STL  Wrist_2_Link.STL  base_link.STL
ordata/environments/: ada_visibility.env.xml
ordata/robots/: mico_straight.robot.xml
src/: test.py
src/adapy/: __init__.py  ada.py  adarobot.py  exceptions.py
