<package>
   <name>ada_description</name>
   <version>0.0.0</version>
   <description>
      URDF model of ADA. ADA, the Assistive Dexterous Arm, was designed
      and built by the Personal Robotics Laboratory at Carnegie Mellon
      University.
   </description>
   <author>Tekin Mericli</author>
   <maintainer email="tekin@cmu.edu">Tekin Mericli</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
   <run_depend>or_urdf</run_depend>
   <run_depend>xacro</run_depend>
   <export>
      <openrave data="${prefix}/ordata"/>
   </export>
</package>
