<?xml version="1.0"?>
<package>
    <name>adapy</name>
    <version>0.2.0</version>
    <description>
        Python library for interacting with ADA through OpenRAVE. ADA is an
        "Assistive Dextrous Arm" developed by the Personal Robotics Lab at
        Carnegie Mellon University, intended for helping elderly people and
        those with disabilities. The system is composed of a Kinova Mico arm for
        manipulation accompanied by several sensors for perception and world
        modeling.
    </description>

    <author email="snikolai@andrew.cmu.edu">Stefanos Nikolaidis</author>
    <maintainer email="snikolai@andrew.cmu.edu">Stefanos Nikolaidis</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

  <depend>python</depend>

 
  <exec_depend>cbirrt2</exec_depend>
  <exec_depend>prpy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>ipython</exec_depend>
  <exec_depend>python-argparse</exec_depend>
  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-yaml</exec_depend>
  <exec_depend>or_urdf</exec_depend>
  <exec_depend>or_ompl</exec_depend>
  <exec_depend>openrave</exec_depend>
</package>


